--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "alpha",
     "require": {
         "php": ">=5.3",
-        "ahmjw/php-dom-view": "1.0"
+        "ahmjw/php-dom-view": "1.0.*"
     },
     "autoload": {
         "psr-4": {
