--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
     "minimum-stability": "alpha",
     "require": {
         "php": ">=5.3",
+    },
+    "require-dev": {
         "ahmjw/php-dom-view": "1.0.*"
     },
     "autoload": {
